--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,14 @@ services:
         MYSQL_ROOT_PASSWORD: password
     ports:
       - "3315:3306"
+      
+  profile-service-database:
+    image: mysql:9.2.0
+    container_name: profile-service-database
+    environment:
+        MYSQL_DATABASE: profile_service
+        MYSQL_USER: user
+        MYSQL_PASSWORD: password
+        MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "3320:3306"
